--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#3b82f6">
   <meta name="description" content="Advanced Habit Tracker with Progress Visualization">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/svg" href="assets/logo.svg">
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
